<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:contentPadding="6dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/cardview_light_background"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/flagNum_1_imageViewId"
            android:layout_alignParentLeft="true"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"
            android:layout_width="55dp"
            android:layout_height="35dp" />
        <ImageView
            android:id="@+id/flagNum_2_imageView_Id"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"
            android:layout_width="55dp"
            android:layout_height="35dp" />
        <TextView
            android:textSize="14dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/playNoTextViewId"
            android:text="@string/play_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="14dp"
            android:id="@+id/groupNametextView_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/playNoTextViewId"
            android:text="@string/group_dggdgdgno" />
        <TextView
            android:textSize="16dp"
            android:textStyle="bold"
            android:id="@+id/teamNameTextView_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/groupNametextView_Id"
            android:text="@string/team_ngfhfame" />
        <TextView
            android:textSize="14dp"
            android:id="@+id/dateTextView_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/teamNameTextView_Id"
            android:text="@string/date" />
        <TextView
            android:textSize="14dp"
            android:textStyle="bold"
            android:id="@+id/timeTextView_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/dateTextView_Id"
            android:text="@string/time" />
        <TextView
            android:textSize="14dp"
            android:id="@+id/stadiumNameTextView_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/timeTextView_Id"
            android:text="@string/stadium_name" />
    </RelativeLayout>


</android.support.v7.widget.CardView>