<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/update_dialog"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageViewRecord"
            android:src="@drawable/addphoto"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <EditText
            android:id="@+id/editName"
            android:hint="@string/name_hint"
            android:layout_marginTop="6dp"
            android:ems="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:gravity="start"
            android:id="@+id/editPost"
            android:hint="@string/post_hint"
            android:layout_marginTop="6dp"
            android:ems="10"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/btnUpdate"
            android:text="@string/update_btn_txt"
            android:layout_marginTop="6dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:minWidth="160dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</ScrollView>