<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="6dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:contentPadding="10dp"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/imgIcon"
            android:layout_width="100dp"
            android:layout_height="100dp" />


        <LinearLayout
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtName"
                android:text="@string/name_here"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_width="match_parent"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="6dp"
            android:orientation="vertical"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/post"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtPost"
                android:text="@string/postText"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_width="match_parent"
                />


        </LinearLayout>

    </LinearLayout>




</android.support.v7.widget.CardView>